[gd_scene load_steps=2 format=3 uid="uid://8j33utqs7p7g"]

[ext_resource type="Script" path="res://WorldMap/Modules/ConvoyProgrammer/VehicleSelector/ConvoyProgrammerVehicleChooser.gd" id="1_wdwyo"]

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wdwyo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.403922)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -108.5
offset_right = 324.0
offset_bottom = 108.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Select Characters"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="A" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/A"]
layout_mode = 2
text = "Available"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/A"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="AvailableColumn" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/A/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="S" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/S"]
layout_mode = 2
text = "Selected"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/S"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SelectedColumn" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/S/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Stats" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="Placeholder" type="Label" parent="VBoxContainer/HBoxContainer/Stats"]
layout_mode = 2
text = "Placeholder stat"

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "Confirm"

[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
